# music-recomender

./: README.md
analysis/: .gitignore  Dockerfile  pyproject.toml
recommender/: main.py  mining.py  output.csv  pyproject.toml
